--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,11 @@ node_modules/
 .env.test.local
 .env.production.local
 
+# Google Credentials (sensitive)
+backend/config/google-credentials.json
+backend/config/google-credentials1.json
+**/google-credentials*.json
+
 # Build outputs
 build/
 dist/
